[gd_scene load_steps=4 format=3 uid="uid://k00yvrjm63ux"]

[ext_resource type="Script" uid="uid://d28bxv4mt727f" path="res://quest/script/quest.gd" id="1_66myh"]
[ext_resource type="Texture2D" uid="uid://drrcxl6nb0b1n" path="res://character/assets/player.png" id="1_uh8jx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_66myh"]

[node name="Quests" type="Node2D"]
script = ExtResource("1_66myh")

[node name="NPC1" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="NPC1"]

[node name="GetItemsNpc" type="Sprite2D" parent="NPC1/Area2D"]
position = Vector2(237, 32)
texture = ExtResource("1_uh8jx")
hframes = 6
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC1/Area2D"]
position = Vector2(237, 39)
shape = SubResource("RectangleShape2D_66myh")

[node name="CanvasLayer" type="CanvasLayer" parent="NPC1"]

[node name="PanelContainer" type="PanelContainer" parent="NPC1/CanvasLayer"]
offset_right = 77.0
offset_bottom = 43.0

[node name="RichTextLabel" type="RichTextLabel" parent="NPC1/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 9
text = "Quest"

[node name="RichTextLabel2" type="RichTextLabel" parent="NPC1/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 6
text = "Apanhe o lixo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NPC2" type="Node2D" parent="."]
position = Vector2(-86, 65)

[node name="Area2D" type="Area2D" parent="NPC2"]

[node name="GetItemsNpc" type="Sprite2D" parent="NPC2/Area2D"]
position = Vector2(237, 32)
texture = ExtResource("1_uh8jx")
hframes = 6
vframes = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC2/Area2D"]
position = Vector2(237, 39)
shape = SubResource("RectangleShape2D_66myh")

[node name="CanvasLayer" type="CanvasLayer" parent="NPC2"]

[node name="PanelContainer" type="PanelContainer" parent="NPC2/CanvasLayer"]
visible = false
offset_right = 77.0
offset_bottom = 43.0

[node name="RichTextLabel" type="RichTextLabel" parent="NPC2/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 9
text = "Quest"

[node name="RichTextLabel2" type="RichTextLabel" parent="NPC2/CanvasLayer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 6
text = "teste"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "I"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="NPC1/Area2D" to="." method="_on_area_npc1_body_entered"]
[connection signal="body_exited" from="NPC1/Area2D" to="." method="_on_area_npc1_body_exited"]
[connection signal="body_entered" from="NPC2/Area2D" to="." method="_on_area_npc2_body_entered"]
[connection signal="body_exited" from="NPC2/Area2D" to="." method="_on_area_npc2_body_exited"]
